--- a/client/frontend/index.html
+++ b/client/frontend/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Stan-Gee Testing</title>
 
-</body>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div>
+      <div>
+        <span>
+          Testing results
+        </span>
+      </div>
+      <div>
+        <button>
+          Start a test
+        </button>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
